--- a/HotelListing.Webapi/HotelListing.Webapi.csproj
+++ b/HotelListing.Webapi/HotelListing.Webapi.csproj
@@ -14,12 +14,14 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\HotelListing.Data\HotelListing.Data.csproj" />
       <ProjectReference Include="..\HotelListing.Utilities\HotelListing.Utilities.csproj" />
+      <ProjectReference Include="..\Repository\Repository.csproj" />
     </ItemGroup>
 
     <ItemGroup>
