--- a/HotelListing.Utilities/HotelListing.Utilities.csproj
+++ b/HotelListing.Utilities/HotelListing.Utilities.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HotelListing.Data\HotelListing.Data.csproj" />
+    </ItemGroup>
+
 </Project>
