--- a/HotelListing.Webapi/appsettings.json
+++ b/HotelListing.Webapi/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt" : 
+  {
+    "Issuer" : "HotelListingAPI",
+    "Lifetime" : 15
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "HotelHostingDB" : "server=localhost; database=HotelHostingDB_161021; trusted_connection=true;"
