Finished adding jwt

--- a/HotelListing.Webapi/appsettings.json
+++ b/HotelListing.Webapi/appsettings.json
@@ -6,8 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Jwt" : 
-  {
+  "Jwt" : {
     "Issuer" : "HotelListingAPI",
     "Lifetime" : 15
   },
